# summer2025

./: README.md
v0/: run.py
v0/agents/: analyst_agent.py  base_agent.py  coder_agent.py  tester_agent.py
v0/pipelines/: dev_pipeline.py
v1/: run_analyst.py  run_coder.py  run_tester.py
v1/shared/: analyst_output.txt  coder_output.txt  tester_output.txt
v1/utils/: file_io.py
v2/: run.py  run_agents.py
v2/agents/: analyst_agent.py  base_agent.py  coder_agent.py  tester_agent.py
v2/outputs/: analyst_output.txt  coder_output.txt
v2/prompts/: analyst_prompt.txt
v3/: gemma3.py  gemma3_oop.py  llama3_3_attempt.py  sophia_run.sh
v3_single_node/: chain_of_agents_output.txt  gemma3.py  llama4_attempt.py  proxies.sh
v3_single_node/combined/: hpc_teacher.py  hpc_teacher_v0.py  react_manager_v3.py  servers_config.json
v3_single_node/manager_attempt/: analyst_spec.txt  matmul  matmul.cu  react_manager.py
v3_single_node/manager_mcp/: manager_mcp_v0.py  manager_mcp_v1.py  servers_config.json  test.db
v3_single_node/manager_upgraded/: main.cpp  matrixMul  matrixMul.cu  matrixMul.sycl  matrixMul_omp  matrixMul_omp.cpp  matrixMul_python.py  matrix_mul.cu  matrix_multiply  matrix_multiply.cpp  matrix_multiply.h  message.cpp  nbody.cpp  nbody.cu  (+7 more)
v3_single_node/working_prototype/: CMakeLists.txt  analyst_output.txt  coder_output  coder_output.cu  gemma3_oop_v1.py  tester_output.cpp
v4_multinode_model_parallelism/: accelerate_config.yaml  agentic_chain_dbg.o4963718  gemma_multinode.py  run_agents_debug.pbs  run_agents_preempt.pbs
v5_smolagents/: analyst_only.py
(+25 files in other folders)
